parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM inicializarDirectorio ID PUNTOYCOMA clases vars2 funciones MAIN PARENTESISINICIAL PARENTESISFINAL vars2 bloque
Rule 2     inicializarDirectorio -> empty
Rule 3     clases -> CLASE ID herencia bloqueClase clases
Rule 4     clases -> empty
Rule 5     herencia -> HEREDA ID
Rule 6     herencia -> empty
Rule 7     bloqueClase -> LLAVEINICIAL ATRIBUTOS bloqueAtributos METODOS bloqueMetodos LLAVEFINAL PUNTOYCOMA
Rule 8     bloqueAtributos -> LLAVEINICIAL listaVarsSimples LLAVEFINAL
Rule 9     bloqueMetodos -> LLAVEINICIAL funciones LLAVEFINAL
Rule 10    funciones -> funcionSimple
Rule 11    funciones -> funcionVoid
Rule 12    funciones -> empty
Rule 13    funcionSimple -> FUNC tipo ID agregarFuncion PARENTESISINICIAL param PARENTESISFINAL vars2 bloqueFuncional eliminarContexto funciones
Rule 14    funcionVoid -> FUNC VOID ID agregarFuncion PARENTESISINICIAL param PARENTESISFINAL vars2 bloque eliminarContexto funciones
Rule 15    agregarFuncion -> <empty>
Rule 16    eliminarContexto -> <empty>
Rule 17    param -> tipo ID agregarParam paramsAdicionales
Rule 18    param -> empty
Rule 19    agregarParam -> <empty>
Rule 20    paramsAdicionales -> COMA param
Rule 21    paramsAdicionales -> empty
Rule 22    vars2 -> vars
Rule 23    vars2 -> empty
Rule 24    vars -> VAR listaVarsSimples
Rule 25    vars -> VAR listaVarsCompuestas
Rule 26    listaVarsSimples -> tipo guardarTipo DOSPUNTOS listaIDsSimples PUNTOYCOMA varsAdicionales
Rule 27    guardarTipo -> <empty>
Rule 28    listaVarsCompuestas -> ID DOSPUNTOS listaIDsCompuestos PUNTOYCOMA varsAdicionales
Rule 29    listaIDsSimples -> ID array comasAdicionalesSimples
Rule 30    array -> CORCHETEINICIAL CTE_I CORCHETEFINAL matrix
Rule 31    array -> empty
Rule 32    matrix -> CORCHETEINICIAL CTE_I CORCHETEFINAL
Rule 33    matrix -> empty
Rule 34    listaIDsCompuestos -> ID comasAdicionalesCompuestas
Rule 35    comasAdicionalesSimples -> COMA listaIDsSimples
Rule 36    comasAdicionalesSimples -> empty
Rule 37    comasAdicionalesCompuestas -> COMA listaIDsCompuestos
Rule 38    comasAdicionalesCompuestas -> empty
Rule 39    varsAdicionales -> listaVarsSimples
Rule 40    varsAdicionales -> listaVarsCompuestas
Rule 41    varsAdicionales -> empty
Rule 42    tipo -> INT
Rule 43    tipo -> FLOAT
Rule 44    tipo -> CHAR
Rule 45    tipo -> BOOL
Rule 46    bloque -> LLAVEINICIAL estatuto2 LLAVEFINAL
Rule 47    estatuto2 -> estatuto estatuto2
Rule 48    estatuto2 -> empty
Rule 49    estatuto -> asignacion
Rule 50    estatuto -> condicion
Rule 51    estatuto -> escritura
Rule 52    estatuto -> lectura
Rule 53    estatuto -> cicloFor
Rule 54    estatuto -> cicloWhile
Rule 55    estatuto -> llamada
Rule 56    asignacion -> variable IGUALA hiperexpresion cuadruploAsignacion PUNTOYCOMA
Rule 57    cuadruploAsignacion -> empty
Rule 58    condicion -> IF PARENTESISINICIAL hiperexpresion PARENTESISFINAL bloque bloqueCondicional
Rule 59    bloqueCondicional -> ELSE bloque
Rule 60    bloqueCondicional -> empty
Rule 61    bloqueFuncional -> LLAVEINICIAL estatutoFuncional2 LLAVEFINAL
Rule 62    estatutoFuncional2 -> estatutoFuncional estatutoFuncional2
Rule 63    estatutoFuncional2 -> empty
Rule 64    estatutoFuncional -> asignacion
Rule 65    estatutoFuncional -> condicionFuncional
Rule 66    estatutoFuncional -> escritura
Rule 67    estatutoFuncional -> lectura
Rule 68    estatutoFuncional -> cicloFor
Rule 69    estatutoFuncional -> cicloWhile
Rule 70    estatutoFuncional -> llamada
Rule 71    estatutoFuncional -> RETURN PARENTESISINICIAL hiperexpresion PARENTESISFINAL PUNTOYCOMA
Rule 72    condicionFuncional -> IF PARENTESISINICIAL hiperexpresion PARENTESISFINAL bloqueFuncional bloqueCondicionalFuncional
Rule 73    bloqueCondicionalFuncional -> ELSE bloqueFuncional
Rule 74    bloqueCondicionalFuncional -> empty
Rule 75    escritura -> PRINT PARENTESISINICIAL listaExpresiones PARENTESISFINAL PUNTOYCOMA
Rule 76    listaExpresiones -> hiperexpresion cuadruploEscritura expresionesAdicionales
Rule 77    expresionesAdicionales -> COMA listaExpresiones
Rule 78    expresionesAdicionales -> empty
Rule 79    cuadruploEscritura -> empty
Rule 80    lectura -> READ PARENTESISINICIAL listaVariables PARENTESISFINAL PUNTOYCOMA
Rule 81    listaVariables -> variable cuadruploLectura variablesAdicionales
Rule 82    variablesAdicionales -> COMA listaVariables
Rule 83    variablesAdicionales -> empty
Rule 84    cuadruploLectura -> empty
Rule 85    cicloFor -> FOR PARENTESISINICIAL ID IGUALA hiperexpresion UNTIL hiperexpresion PARENTESISFINAL bloque
Rule 86    cicloWhile -> WHILE PARENTESISINICIAL hiperexpresion PARENTESISFINAL bloque
Rule 87    llamada -> ID existeFuncion PARENTESISINICIAL listaHiperexpresiones PARENTESISFINAL
Rule 88    llamada -> ID PUNTO ID PARENTESISINICIAL listaHiperexpresiones PARENTESISFINAL
Rule 89    existeFuncion -> <empty>
Rule 90    listaHiperexpresiones -> hiperexpresion hiperexpresionesAdicionales
Rule 91    hiperexpresionesAdicionales -> COMA listaHiperexpresiones
Rule 92    hiperexpresionesAdicionales -> empty
Rule 93    variable -> ID insertarAPilas arrayVariable
Rule 94    variable -> ID PUNTO ID
Rule 95    insertarAPilas -> empty
Rule 96    arrayVariable -> CORCHETEINICIAL hiperexpresion CORCHETEFINAL matrixVariable
Rule 97    arrayVariable -> empty
Rule 98    matrixVariable -> CORCHETEINICIAL hiperexpresion CORCHETEFINAL
Rule 99    matrixVariable -> empty
Rule 100   hiperexpresion -> superexpresion validacionHiperexpresion andOr
Rule 101   validacionHiperexpresion -> empty
Rule 102   andOr -> AND cuadruploHiperexpresion hiperexpresion
Rule 103   andOr -> OR cuadruploHiperexpresion hiperexpresion
Rule 104   andOr -> empty
Rule 105   cuadruploHiperexpresion -> empty
Rule 106   superexpresion -> exp validacionSuperexpresion comparaciones
Rule 107   validacionSuperexpresion -> empty
Rule 108   comparaciones -> MAYORQUE cuadruploSuperexpresion superexpresion
Rule 109   comparaciones -> MAYORIGUALQUE cuadruploSuperexpresion superexpresion
Rule 110   comparaciones -> MENORQUE cuadruploSuperexpresion superexpresion
Rule 111   comparaciones -> MENORIGUALQUE cuadruploSuperexpresion superexpresion
Rule 112   comparaciones -> EQUIVALENTE cuadruploSuperexpresion superexpresion
Rule 113   comparaciones -> DIFERENTEDE cuadruploSuperexpresion superexpresion
Rule 114   comparaciones -> empty
Rule 115   cuadruploSuperexpresion -> empty
Rule 116   exp -> termino validacionExp sumaRestaExpresiones
Rule 117   validacionExp -> empty
Rule 118   sumaRestaExpresiones -> SUMA cuadruploExpresion exp
Rule 119   sumaRestaExpresiones -> RESTA cuadruploExpresion exp
Rule 120   sumaRestaExpresiones -> empty
Rule 121   cuadruploExpresion -> empty
Rule 122   termino -> factor validacionTermino multiplicacionDivisionTerminos
Rule 123   validacionTermino -> empty
Rule 124   multiplicacionDivisionTerminos -> MULTIPLICACION cuadruploTermino termino
Rule 125   multiplicacionDivisionTerminos -> DIVISION cuadruploTermino termino
Rule 126   multiplicacionDivisionTerminos -> empty
Rule 127   cuadruploTermino -> empty
Rule 128   factor -> PARENTESISINICIAL agregarParentesis hiperexpresion PARENTESISFINAL eliminarParentesis
Rule 129   factor -> var_cte
Rule 130   factor -> variable
Rule 131   factor -> llamada
Rule 132   agregarParentesis -> empty
Rule 133   eliminarParentesis -> empty
Rule 134   var_cte -> CTE_I insertarEnteros
Rule 135   var_cte -> CTE_F insertarFlotantes
Rule 136   var_cte -> CTE_STRING insertarStrings
Rule 137   var_cte -> CTE_BOOL insertarBooleanos
Rule 138   insertarEnteros -> empty
Rule 139   insertarFlotantes -> empty
Rule 140   insertarStrings -> empty
Rule 141   insertarBooleanos -> empty
Rule 142   empty -> <empty>

Terminals, with rules where they appear

AND                  : 102
ATRIBUTOS            : 7
BOOL                 : 45
CHAR                 : 44
CLASE                : 3
COMA                 : 20 35 37 77 82 91
CORCHETEFINAL        : 30 32 96 98
CORCHETEINICIAL      : 30 32 96 98
CTE_BOOL             : 137
CTE_F                : 135
CTE_I                : 30 32 134
CTE_STRING           : 136
DIFERENTEDE          : 113
DIVISION             : 125
DOSPUNTOS            : 26 28
ELSE                 : 59 73
EQUIVALENTE          : 112
FLOAT                : 43
FOR                  : 85
FUNC                 : 13 14
HEREDA               : 5
ID                   : 1 3 5 13 14 17 28 29 34 85 87 88 88 93 94 94
IF                   : 58 72
IGUALA               : 56 85
INT                  : 42
LLAVEFINAL           : 7 8 9 46 61
LLAVEINICIAL         : 7 8 9 46 61
MAIN                 : 1
MAYORIGUALQUE        : 109
MAYORQUE             : 108
MENORIGUALQUE        : 111
MENORQUE             : 110
METODOS              : 7
MULTIPLICACION       : 124
OR                   : 103
PARENTESISFINAL      : 1 13 14 58 71 72 75 80 85 86 87 88 128
PARENTESISINICIAL    : 1 13 14 58 71 72 75 80 85 86 87 88 128
PRINT                : 75
PROGRAM              : 1
PUNTO                : 88 94
PUNTOYCOMA           : 1 7 26 28 56 71 75 80
READ                 : 80
RESTA                : 119
RETURN               : 71
SUMA                 : 118
UNTIL                : 85
VAR                  : 24 25
VOID                 : 14
WHILE                : 86
error                : 

Nonterminals, with rules where they appear

agregarFuncion       : 13 14
agregarParam         : 17
agregarParentesis    : 128
andOr                : 100
array                : 29
arrayVariable        : 93
asignacion           : 49 64
bloque               : 1 14 58 59 85 86
bloqueAtributos      : 7
bloqueClase          : 3
bloqueCondicional    : 58
bloqueCondicionalFuncional : 72
bloqueFuncional      : 13 72 73
bloqueMetodos        : 7
cicloFor             : 53 68
cicloWhile           : 54 69
clases               : 1 3
comasAdicionalesCompuestas : 34
comasAdicionalesSimples : 29
comparaciones        : 106
condicion            : 50
condicionFuncional   : 65
cuadruploAsignacion  : 56
cuadruploEscritura   : 76
cuadruploExpresion   : 118 119
cuadruploHiperexpresion : 102 103
cuadruploLectura     : 81
cuadruploSuperexpresion : 108 109 110 111 112 113
cuadruploTermino     : 124 125
eliminarContexto     : 13 14
eliminarParentesis   : 128
empty                : 2 4 6 12 18 21 23 31 33 36 38 41 48 57 60 63 74 78 79 83 84 92 95 97 99 101 104 105 107 114 115 117 120 121 123 126 127 132 133 138 139 140 141
escritura            : 51 66
estatuto             : 47
estatuto2            : 46 47
estatutoFuncional    : 62
estatutoFuncional2   : 61 62
existeFuncion        : 87
exp                  : 106 118 119
expresionesAdicionales : 76
factor               : 122
funcionSimple        : 10
funcionVoid          : 11
funciones            : 1 9 13 14
guardarTipo          : 26
herencia             : 3
hiperexpresion       : 56 58 71 72 76 85 85 86 90 96 98 102 103 128
hiperexpresionesAdicionales : 90
inicializarDirectorio : 1
insertarAPilas       : 93
insertarBooleanos    : 137
insertarEnteros      : 134
insertarFlotantes    : 135
insertarStrings      : 136
lectura              : 52 67
listaExpresiones     : 75 77
listaHiperexpresiones : 87 88 91
listaIDsCompuestos   : 28 37
listaIDsSimples      : 26 35
listaVariables       : 80 82
listaVarsCompuestas  : 25 40
listaVarsSimples     : 8 24 39
llamada              : 55 70 131
matrix               : 30
matrixVariable       : 96
multiplicacionDivisionTerminos : 122
param                : 13 14 20
paramsAdicionales    : 17
programa             : 0
sumaRestaExpresiones : 116
superexpresion       : 100 108 109 110 111 112 113
termino              : 116 124 125
tipo                 : 13 17 26
validacionExp        : 116
validacionHiperexpresion : 100
validacionSuperexpresion : 106
validacionTermino    : 122
var_cte              : 129
variable             : 56 81 130
variablesAdicionales : 81
vars                 : 22
vars2                : 1 1 13 14
varsAdicionales      : 26 28

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM inicializarDirectorio ID PUNTOYCOMA clases vars2 funciones MAIN PARENTESISINICIAL PARENTESISFINAL vars2 bloque

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . inicializarDirectorio ID PUNTOYCOMA clases vars2 funciones MAIN PARENTESISINICIAL PARENTESISFINAL vars2 bloque
    (2) inicializarDirectorio -> . empty
    (142) empty -> .

    ID              reduce using rule 142 (empty -> .)

    inicializarDirectorio          shift and go to state 3
    empty                          shift and go to state 4

state 3

    (1) programa -> PROGRAM inicializarDirectorio . ID PUNTOYCOMA clases vars2 funciones MAIN PARENTESISINICIAL PARENTESISFINAL vars2 bloque

    ID              shift and go to state 5


state 4

    (2) inicializarDirectorio -> empty .

    ID              reduce using rule 2 (inicializarDirectorio -> empty .)


state 5

    (1) programa -> PROGRAM inicializarDirectorio ID . PUNTOYCOMA clases vars2 funciones MAIN PARENTESISINICIAL PARENTESISFINAL vars2 bloque

    PUNTOYCOMA      shift and go to state 6


state 6

    (1) programa -> PROGRAM inicializarDirectorio ID PUNTOYCOMA . clases vars2 funciones MAIN PARENTESISINICIAL PARENTESISFINAL vars2 bloque
    (3) clases -> . CLASE ID herencia bloqueClase clases
    (4) clases -> . empty
    (142) empty -> .

    CLASE           shift and go to state 8
    VAR             reduce using rule 142 (empty -> .)
    FUNC            reduce using rule 142 (empty -> .)
    MAIN            reduce using rule 142 (empty -> .)

    clases                         shift and go to state 7
    empty                          shift and go to state 9

state 7

    (1) programa -> PROGRAM inicializarDirectorio ID PUNTOYCOMA clases . vars2 funciones MAIN PARENTESISINICIAL PARENTESISFINAL vars2 bloque
    (22) vars2 -> . vars
    (23) vars2 -> . empty
    (24) vars -> . VAR listaVarsSimples
    (25) vars -> . VAR listaVarsCompuestas
    (142) empty -> .

    VAR             shift and go to state 13
    FUNC            reduce using rule 142 (empty -> .)
    MAIN            reduce using rule 142 (empty -> .)

    vars2                          shift and go to state 10
    vars                           shift and go to state 11
    empty                          shift and go to state 12

state 8

    (3) clases -> CLASE . ID herencia bloqueClase clases

    ID              shift and go to state 14


state 9

    (4) clases -> empty .

    VAR             reduce using rule 4 (clases -> empty .)
    FUNC            reduce using rule 4 (clases -> empty .)
    MAIN            reduce using rule 4 (clases -> empty .)


state 10

    (1) programa -> PROGRAM inicializarDirectorio ID PUNTOYCOMA clases vars2 . funciones MAIN PARENTESISINICIAL PARENTESISFINAL vars2 bloque
    (10) funciones -> . funcionSimple
    (11) funciones -> . funcionVoid
    (12) funciones -> . empty
    (13) funcionSimple -> . FUNC tipo ID agregarFuncion PARENTESISINICIAL param PARENTESISFINAL vars2 bloqueFuncional eliminarContexto funciones
    (14) funcionVoid -> . FUNC VOID ID agregarFuncion PARENTESISINICIAL param PARENTESISFINAL vars2 bloque eliminarContexto funciones
    (142) empty -> .

    FUNC            shift and go to state 19
    MAIN            reduce using rule 142 (empty -> .)

    funciones                      shift and go to state 15
    funcionSimple                  shift and go to state 16
    funcionVoid                    shift and go to state 17
    empty                          shift and go to state 18

state 11

    (22) vars2 -> vars .

    FUNC            reduce using rule 22 (vars2 -> vars .)
    MAIN            reduce using rule 22 (vars2 -> vars .)
    LLAVEINICIAL    reduce using rule 22 (vars2 -> vars .)


state 12

    (23) vars2 -> empty .

    FUNC            reduce using rule 23 (vars2 -> empty .)
    MAIN            reduce using rule 23 (vars2 -> empty .)
    LLAVEINICIAL    reduce using rule 23 (vars2 -> empty .)


state 13

    (24) vars -> VAR . listaVarsSimples
    (25) vars -> VAR . listaVarsCompuestas
    (26) listaVarsSimples -> . tipo guardarTipo DOSPUNTOS listaIDsSimples PUNTOYCOMA varsAdicionales
    (28) listaVarsCompuestas -> . ID DOSPUNTOS listaIDsCompuestos PUNTOYCOMA varsAdicionales
    (42) tipo -> . INT
    (43) tipo -> . FLOAT
    (44) tipo -> . CHAR
    (45) tipo -> . BOOL

    ID              shift and go to state 23
    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    CHAR            shift and go to state 26
    BOOL            shift and go to state 27

    listaVarsSimples               shift and go to state 20
    listaVarsCompuestas            shift and go to state 21
    tipo                           shift and go to state 22

state 14

    (3) clases -> CLASE ID . herencia bloqueClase clases
    (5) herencia -> . HEREDA ID
    (6) herencia -> . empty
    (142) empty -> .

    HEREDA          shift and go to state 29
    LLAVEINICIAL    reduce using rule 142 (empty -> .)

    herencia                       shift and go to state 28
    empty                          shift and go to state 30

state 15

    (1) programa -> PROGRAM inicializarDirectorio ID PUNTOYCOMA clases vars2 funciones . MAIN PARENTESISINICIAL PARENTESISFINAL vars2 bloque

    MAIN            shift and go to state 31


state 16

    (10) funciones -> funcionSimple .

    MAIN            reduce using rule 10 (funciones -> funcionSimple .)
    LLAVEFINAL      reduce using rule 10 (funciones -> funcionSimple .)


state 17

    (11) funciones -> funcionVoid .

    MAIN            reduce using rule 11 (funciones -> funcionVoid .)
    LLAVEFINAL      reduce using rule 11 (funciones -> funcionVoid .)


state 18

    (12) funciones -> empty .

    MAIN            reduce using rule 12 (funciones -> empty .)
    LLAVEFINAL      reduce using rule 12 (funciones -> empty .)


state 19

    (13) funcionSimple -> FUNC . tipo ID agregarFuncion PARENTESISINICIAL param PARENTESISFINAL vars2 bloqueFuncional eliminarContexto funciones
    (14) funcionVoid -> FUNC . VOID ID agregarFuncion PARENTESISINICIAL param PARENTESISFINAL vars2 bloque eliminarContexto funciones
    (42) tipo -> . INT
    (43) tipo -> . FLOAT
    (44) tipo -> . CHAR
    (45) tipo -> . BOOL

    VOID            shift and go to state 33
    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    CHAR            shift and go to state 26
    BOOL            shift and go to state 27

    tipo                           shift and go to state 32

state 20

    (24) vars -> VAR listaVarsSimples .

    FUNC            reduce using rule 24 (vars -> VAR listaVarsSimples .)
    MAIN            reduce using rule 24 (vars -> VAR listaVarsSimples .)
    LLAVEINICIAL    reduce using rule 24 (vars -> VAR listaVarsSimples .)


state 21

    (25) vars -> VAR listaVarsCompuestas .

    FUNC            reduce using rule 25 (vars -> VAR listaVarsCompuestas .)
    MAIN            reduce using rule 25 (vars -> VAR listaVarsCompuestas .)
    LLAVEINICIAL    reduce using rule 25 (vars -> VAR listaVarsCompuestas .)


state 22

    (26) listaVarsSimples -> tipo . guardarTipo DOSPUNTOS listaIDsSimples PUNTOYCOMA varsAdicionales
    (27) guardarTipo -> .

    DOSPUNTOS       reduce using rule 27 (guardarTipo -> .)

    guardarTipo                    shift and go to state 34

state 23

    (28) listaVarsCompuestas -> ID . DOSPUNTOS listaIDsCompuestos PUNTOYCOMA varsAdicionales

    DOSPUNTOS       shift and go to state 35


state 24

    (42) tipo -> INT .

    DOSPUNTOS       reduce using rule 42 (tipo -> INT .)
    ID              reduce using rule 42 (tipo -> INT .)


state 25

    (43) tipo -> FLOAT .

    DOSPUNTOS       reduce using rule 43 (tipo -> FLOAT .)
    ID              reduce using rule 43 (tipo -> FLOAT .)


state 26

    (44) tipo -> CHAR .

    DOSPUNTOS       reduce using rule 44 (tipo -> CHAR .)
    ID              reduce using rule 44 (tipo -> CHAR .)


state 27

    (45) tipo -> BOOL .

    DOSPUNTOS       reduce using rule 45 (tipo -> BOOL .)
    ID              reduce using rule 45 (tipo -> BOOL .)


state 28

    (3) clases -> CLASE ID herencia . bloqueClase clases
    (7) bloqueClase -> . LLAVEINICIAL ATRIBUTOS bloqueAtributos METODOS bloqueMetodos LLAVEFINAL PUNTOYCOMA

    LLAVEINICIAL    shift and go to state 37

    bloqueClase                    shift and go to state 36

state 29

    (5) herencia -> HEREDA . ID

    ID              shift and go to state 38


state 30

    (6) herencia -> empty .

    LLAVEINICIAL    reduce using rule 6 (herencia -> empty .)


state 31

    (1) programa -> PROGRAM inicializarDirectorio ID PUNTOYCOMA clases vars2 funciones MAIN . PARENTESISINICIAL PARENTESISFINAL vars2 bloque

    PARENTESISINICIAL shift and go to state 39


state 32

    (13) funcionSimple -> FUNC tipo . ID agregarFuncion PARENTESISINICIAL param PARENTESISFINAL vars2 bloqueFuncional eliminarContexto funciones

    ID              shift and go to state 40


state 33

    (14) funcionVoid -> FUNC VOID . ID agregarFuncion PARENTESISINICIAL param PARENTESISFINAL vars2 bloque eliminarContexto funciones

    ID              shift and go to state 41


state 34

    (26) listaVarsSimples -> tipo guardarTipo . DOSPUNTOS listaIDsSimples PUNTOYCOMA varsAdicionales

    DOSPUNTOS       shift and go to state 42


state 35

    (28) listaVarsCompuestas -> ID DOSPUNTOS . listaIDsCompuestos PUNTOYCOMA varsAdicionales
    (34) listaIDsCompuestos -> . ID comasAdicionalesCompuestas

    ID              shift and go to state 43

    listaIDsCompuestos             shift and go to state 44

state 36

    (3) clases -> CLASE ID herencia bloqueClase . clases
    (3) clases -> . CLASE ID herencia bloqueClase clases
    (4) clases -> . empty
    (142) empty -> .

    CLASE           shift and go to state 8
    VAR             reduce using rule 142 (empty -> .)
    FUNC            reduce using rule 142 (empty -> .)
    MAIN            reduce using rule 142 (empty -> .)

    clases                         shift and go to state 45
    empty                          shift and go to state 9

state 37

    (7) bloqueClase -> LLAVEINICIAL . ATRIBUTOS bloqueAtributos METODOS bloqueMetodos LLAVEFINAL PUNTOYCOMA

    ATRIBUTOS       shift and go to state 46


state 38

    (5) herencia -> HEREDA ID .

    LLAVEINICIAL    reduce using rule 5 (herencia -> HEREDA ID .)


state 39

    (1) programa -> PROGRAM inicializarDirectorio ID PUNTOYCOMA clases vars2 funciones MAIN PARENTESISINICIAL . PARENTESISFINAL vars2 bloque

    PARENTESISFINAL shift and go to state 47


state 40

    (13) funcionSimple -> FUNC tipo ID . agregarFuncion PARENTESISINICIAL param PARENTESISFINAL vars2 bloqueFuncional eliminarContexto funciones
    (15) agregarFuncion -> .

    PARENTESISINICIAL reduce using rule 15 (agregarFuncion -> .)

    agregarFuncion                 shift and go to state 48

state 41

    (14) funcionVoid -> FUNC VOID ID . agregarFuncion PARENTESISINICIAL param PARENTESISFINAL vars2 bloque eliminarContexto funciones
    (15) agregarFuncion -> .

    PARENTESISINICIAL reduce using rule 15 (agregarFuncion -> .)

    agregarFuncion                 shift and go to state 49

state 42

    (26) listaVarsSimples -> tipo guardarTipo DOSPUNTOS . listaIDsSimples PUNTOYCOMA varsAdicionales
    (29) listaIDsSimples -> . ID array comasAdicionalesSimples

    ID              shift and go to state 51

    listaIDsSimples                shift and go to state 50

state 43

    (34) listaIDsCompuestos -> ID . comasAdicionalesCompuestas
    (37) comasAdicionalesCompuestas -> . COMA listaIDsCompuestos
    (38) comasAdicionalesCompuestas -> . empty
    (142) empty -> .

    COMA            shift and go to state 53
    PUNTOYCOMA      reduce using rule 142 (empty -> .)

    comasAdicionalesCompuestas     shift and go to state 52
    empty                          shift and go to state 54

state 44

    (28) listaVarsCompuestas -> ID DOSPUNTOS listaIDsCompuestos . PUNTOYCOMA varsAdicionales

    PUNTOYCOMA      shift and go to state 55


state 45

    (3) clases -> CLASE ID herencia bloqueClase clases .

    VAR             reduce using rule 3 (clases -> CLASE ID herencia bloqueClase clases .)
    FUNC            reduce using rule 3 (clases -> CLASE ID herencia bloqueClase clases .)
    MAIN            reduce using rule 3 (clases -> CLASE ID herencia bloqueClase clases .)


state 46

    (7) bloqueClase -> LLAVEINICIAL ATRIBUTOS . bloqueAtributos METODOS bloqueMetodos LLAVEFINAL PUNTOYCOMA
    (8) bloqueAtributos -> . LLAVEINICIAL listaVarsSimples LLAVEFINAL

    LLAVEINICIAL    shift and go to state 56

    bloqueAtributos                shift and go to state 57

state 47

    (1) programa -> PROGRAM inicializarDirectorio ID PUNTOYCOMA clases vars2 funciones MAIN PARENTESISINICIAL PARENTESISFINAL . vars2 bloque
    (22) vars2 -> . vars
    (23) vars2 -> . empty
    (24) vars -> . VAR listaVarsSimples
    (25) vars -> . VAR listaVarsCompuestas
    (142) empty -> .

    VAR             shift and go to state 13
    LLAVEINICIAL    reduce using rule 142 (empty -> .)

    vars2                          shift and go to state 58
    vars                           shift and go to state 11
    empty                          shift and go to state 12

state 48

    (13) funcionSimple -> FUNC tipo ID agregarFuncion . PARENTESISINICIAL param PARENTESISFINAL vars2 bloqueFuncional eliminarContexto funciones

    PARENTESISINICIAL shift and go to state 59


state 49

    (14) funcionVoid -> FUNC VOID ID agregarFuncion . PARENTESISINICIAL param PARENTESISFINAL vars2 bloque eliminarContexto funciones

    PARENTESISINICIAL shift and go to state 60


state 50

    (26) listaVarsSimples -> tipo guardarTipo DOSPUNTOS listaIDsSimples . PUNTOYCOMA varsAdicionales

    PUNTOYCOMA      shift and go to state 61


state 51

    (29) listaIDsSimples -> ID . array comasAdicionalesSimples
    (30) array -> . CORCHETEINICIAL CTE_I CORCHETEFINAL matrix
    (31) array -> . empty
    (142) empty -> .

    CORCHETEINICIAL shift and go to state 63
    COMA            reduce using rule 142 (empty -> .)
    PUNTOYCOMA      reduce using rule 142 (empty -> .)

    array                          shift and go to state 62
    empty                          shift and go to state 64

state 52

    (34) listaIDsCompuestos -> ID comasAdicionalesCompuestas .

    PUNTOYCOMA      reduce using rule 34 (listaIDsCompuestos -> ID comasAdicionalesCompuestas .)


state 53

    (37) comasAdicionalesCompuestas -> COMA . listaIDsCompuestos
    (34) listaIDsCompuestos -> . ID comasAdicionalesCompuestas

    ID              shift and go to state 43

    listaIDsCompuestos             shift and go to state 65

state 54

    (38) comasAdicionalesCompuestas -> empty .

    PUNTOYCOMA      reduce using rule 38 (comasAdicionalesCompuestas -> empty .)


state 55

    (28) listaVarsCompuestas -> ID DOSPUNTOS listaIDsCompuestos PUNTOYCOMA . varsAdicionales
    (39) varsAdicionales -> . listaVarsSimples
    (40) varsAdicionales -> . listaVarsCompuestas
    (41) varsAdicionales -> . empty
    (26) listaVarsSimples -> . tipo guardarTipo DOSPUNTOS listaIDsSimples PUNTOYCOMA varsAdicionales
    (28) listaVarsCompuestas -> . ID DOSPUNTOS listaIDsCompuestos PUNTOYCOMA varsAdicionales
    (142) empty -> .
    (42) tipo -> . INT
    (43) tipo -> . FLOAT
    (44) tipo -> . CHAR
    (45) tipo -> . BOOL

    ID              shift and go to state 23
    FUNC            reduce using rule 142 (empty -> .)
    MAIN            reduce using rule 142 (empty -> .)
    LLAVEINICIAL    reduce using rule 142 (empty -> .)
    LLAVEFINAL      reduce using rule 142 (empty -> .)
    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    CHAR            shift and go to state 26
    BOOL            shift and go to state 27

    varsAdicionales                shift and go to state 66
    listaVarsSimples               shift and go to state 67
    listaVarsCompuestas            shift and go to state 68
    empty                          shift and go to state 69
    tipo                           shift and go to state 22

state 56

    (8) bloqueAtributos -> LLAVEINICIAL . listaVarsSimples LLAVEFINAL
    (26) listaVarsSimples -> . tipo guardarTipo DOSPUNTOS listaIDsSimples PUNTOYCOMA varsAdicionales
    (42) tipo -> . INT
    (43) tipo -> . FLOAT
    (44) tipo -> . CHAR
    (45) tipo -> . BOOL

    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    CHAR            shift and go to state 26
    BOOL            shift and go to state 27

    listaVarsSimples               shift and go to state 70
    tipo                           shift and go to state 22

state 57

    (7) bloqueClase -> LLAVEINICIAL ATRIBUTOS bloqueAtributos . METODOS bloqueMetodos LLAVEFINAL PUNTOYCOMA

    METODOS         shift and go to state 71


state 58

    (1) programa -> PROGRAM inicializarDirectorio ID PUNTOYCOMA clases vars2 funciones MAIN PARENTESISINICIAL PARENTESISFINAL vars2 . bloque
    (46) bloque -> . LLAVEINICIAL estatuto2 LLAVEFINAL

    LLAVEINICIAL    shift and go to state 73

    bloque                         shift and go to state 72

state 59

    (13) funcionSimple -> FUNC tipo ID agregarFuncion PARENTESISINICIAL . param PARENTESISFINAL vars2 bloqueFuncional eliminarContexto funciones
    (17) param -> . tipo ID agregarParam paramsAdicionales
    (18) param -> . empty
    (42) tipo -> . INT
    (43) tipo -> . FLOAT
    (44) tipo -> . CHAR
    (45) tipo -> . BOOL
    (142) empty -> .

    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    CHAR            shift and go to state 26
    BOOL            shift and go to state 27
    PARENTESISFINAL reduce using rule 142 (empty -> .)

    tipo                           shift and go to state 74
    param                          shift and go to state 75
    empty                          shift and go to state 76

state 60

    (14) funcionVoid -> FUNC VOID ID agregarFuncion PARENTESISINICIAL . param PARENTESISFINAL vars2 bloque eliminarContexto funciones
    (17) param -> . tipo ID agregarParam paramsAdicionales
    (18) param -> . empty
    (42) tipo -> . INT
    (43) tipo -> . FLOAT
    (44) tipo -> . CHAR
    (45) tipo -> . BOOL
    (142) empty -> .

    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    CHAR            shift and go to state 26
    BOOL            shift and go to state 27
    PARENTESISFINAL reduce using rule 142 (empty -> .)

    param                          shift and go to state 77
    tipo                           shift and go to state 74
    empty                          shift and go to state 76

state 61

    (26) listaVarsSimples -> tipo guardarTipo DOSPUNTOS listaIDsSimples PUNTOYCOMA . varsAdicionales
    (39) varsAdicionales -> . listaVarsSimples
    (40) varsAdicionales -> . listaVarsCompuestas
    (41) varsAdicionales -> . empty
    (26) listaVarsSimples -> . tipo guardarTipo DOSPUNTOS listaIDsSimples PUNTOYCOMA varsAdicionales
    (28) listaVarsCompuestas -> . ID DOSPUNTOS listaIDsCompuestos PUNTOYCOMA varsAdicionales
    (142) empty -> .
    (42) tipo -> . INT
    (43) tipo -> . FLOAT
    (44) tipo -> . CHAR
    (45) tipo -> . BOOL
